<resources>
    <string name="app_name" translatable="false">MIUI QOL</string>
    <string name="kill_app_to_apply_summary">Force stop the corresponding application to apply the settings.</string>
    <string name="security_center_app_name">Security app</string>
    <string name="behavior_record_enhance_title">App behavior record enhance</string>
    <string name="behavior_record_enhance_summary">View all app behavior does not filter whitelisted applications and system applications.</string>
    <string name="system_app_wlan_control_title">System apps\' WLAN setting</string>
    <string name="system_app_wlan_control_summary">- Prevent Security app from recovering system apps\' WLAN connection setting\n- Show System apps\' WLAN setting\n\nTo check the system apps\' network setting, please go to Security app\'s Toolbox - Apps\' network settings - (Mobile Data) - System apps, and click the app in the list.</string>
    <string name="enable_all_text_view_title">Enable all TextView</string>
    <string name="enable_all_text_view_summary">- Enable System apps\' WLAN setting\n- Skip warning time (Ignore the countdown numbers by yourself)\n- ……\n\n*Prepare for unforeseen consequences.</string>
    <string name="lock_one_hundred_title">Set 100 points on Security app</string>
    <string name="lock_one_hundred_summary">As same as WooBox for MIUI Set 100 points on Security app</string>
    <string name="system_launcher_app_name">System Launcher</string>
    <string name="restore_google_icon_title">Prevent the System Launcher from hiding the Google shortcut</string>
    <string name="screenshot_app_name">Screenshot</string>
    <string name="save_to_pictures_title">Save screenshots to Pictures/Screenshots</string>
    <string name="screen_recorder_app_name">ScreenRecorder</string>
    <string name="save_to_movies_title">Save videos to Movies/ScreenRecorder</string>
    <string name="ai_translate_app_name">Mi AI Translator</string>
    <string name="support_ai_subtitles_title">Force support AI subtitles</string>
    <string name="support_ai_subtitles_summary">Can only translate or transcribe Chinese and English.</string>
    <string name="system_update_app_name">Updater</string>
    <string name="remove_ota_validate_title">Remove OTA validate</string>
    <string name="remove_ota_validate_summary">As same as WooBox for MIUI *Remove OTA validate.\n- Only support VAB series use, please do not open other series.\n- No need for internal testing qualification to flash into the full internal testing package.\n- Those who have internal testing permission will not be able to receive internal testing updates, and can be used to block system updates.\n- After cross-version type upgrade, it is recommended to clear data.\n- Unofficial ROM usage is not supported.\n\n*Prepare for unforeseen consequences.</string>
    <string name="telegram_group_title">Telegram Group</string>
    <string name="telegram_group_summary">Join the MIUI QOL Telegram Group</string>
    <string name="app_name_title">MIUI Quality of Life Improvement</string>
    <string name="app_name_summary">MIUI QOL\nMade casually by ChsBuffer</string>
    <string name="app_description">MIUI Quality of Life Improvement</string>
    <string name="restore_google_icon_summary">MIUI Chinese version only.</string>
    <string name="module_not_enabled_summary">Already enabled? Click here to stop the module, then open the module settings again.</string>
    <string name="module_not_enabled_title">Module is not enabled!</string>
    <string name="system_ui_app_name">SystemUI</string>
    <string name="restore_nearby_sharing_tile_title">Prevent the SystemUI from hiding the Nearby Sharing Quick Settings Tile</string>
    <string name="restore_nearby_sharing_tile_summary">MIUI Chinese version only.</string>
    <string name="behavior_record_system_app_whitelist_title">App Behavior Record system applications whitelist</string>
    <string name="behavior_record_system_app_whitelist_summary">Whitelisted some system applications to prevent Privacy Protection Notifications from scaring users who don\'t know how to turn them off.</string>
    <string name="original_default_open_setting_title">Change App Info \"Clear defaults\" to \"Open by default\"</string>
    <string name="open_by_default">Open by default</string>
    <string name="app_link_open_always">Allow app to open supported links</string>
    <string name="app_link_open_never">Don\'t allow app to open links</string>
    <string name="notification_settings_no_white_list_title">Remove notification settings whitelist</string>
    <string name="notification_settings_no_white_list_summary">Allow floating notification, notification sound, notification vibration, notification on the lock screen by default.</string>
    <string name="kill_system_ui">Force stop SystemUI</string>
    <string name="kill_system_ui_confirm">Are you sure to force stop SystemUI?</string>
    <string name="confirm">OK</string>
    <string name="cancel">Cancel</string>
    <string name="open_source_license">Open-source licenses</string>
    <string name="force_support_playbackcapture_summary">Requires ScreenRecorder app version x.12.6.1.x or later.\nTurn off if you experience problems with audio recording.</string>
    <string name="force_support_playbackcapture_title">Force enable Native Audio Recorder</string>
    <string name="notification_channel_setting_title" >Open channel settings</string>
    <string name="notification_channel_setting_summary">Opening settings from notification menu leads to channel settings instead of app\'s common notification settings</string>
    <string name="restore_google_search_title">Search bar opens Google Search</string>
    <string name="restore_google_feed_title">Replace App Vault into Google Feed</string>
    <string name="restore_google_feed_summary">Force stop Google App if you can\'t swipe to -1 screen</string>
</resources>