<?xml version="1.0" encoding="utf-8"?><!--suppress DeprecatedClassUsageInspection -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <Preference android:summary="@string/kill_app_to_apply_summary" />
    <PreferenceCategory android:title="@string/security_center_app_name">
        <SwitchPreference
            android:defaultValue="true"
            android:key="behavior_record_enhance"
            android:singleLineTitle="false"
            android:summary="@string/behavior_record_enhance_summary"
            android:title="@string/behavior_record_enhance_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:dependency="behavior_record_enhance"
            android:key="behavior_record_system_app_whitelist"
            android:singleLineTitle="false"
            android:summary="@string/behavior_record_system_app_whitelist_summary"
            android:title="@string/behavior_record_system_app_whitelist_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:enabled="false"
            android:key="system_app_wlan_control"
            android:singleLineTitle="false"
            android:summary="@string/system_app_wlan_control_summary"
            android:title="@string/system_app_wlan_control_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:enabled="false"
            android:key="enable_all_text_view"
            android:singleLineTitle="false"
            android:summary="@string/enable_all_text_view_summary"
            android:title="@string/enable_all_text_view_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="original_default_open_setting"
            android:singleLineTitle="false"
            android:title="@string/original_default_open_setting_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="lock_one_hundred"
            android:singleLineTitle="false"
            android:summary="@string/lock_one_hundred_summary"
            android:title="@string/lock_one_hundred_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/system_launcher_app_name">
        <SwitchPreference
            android:defaultValue="true"
            android:key="restore_google_icon"
            android:singleLineTitle="false"
            android:title="@string/restore_google_icon_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="restore_google_feed"
            android:singleLineTitle="false"
            android:title="@string/restore_google_feed_title"
            android:summary="@string/restore_google_feed_summary" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="restore_google_search"
            android:singleLineTitle="false"
            android:title="@string/restore_google_search_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/system_ui_app_name">
        <Preference
            android:key="kill_system_ui"
            android:singleLineTitle="false"
            android:title="@string/kill_system_ui" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="restore_nearby_sharing_tile"
            android:singleLineTitle="false"
            android:title="@string/restore_nearby_sharing_tile_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="notification_settings_no_white_list"
            android:singleLineTitle="false"
            android:summary="@string/notification_settings_no_white_list_summary"
            android:title="@string/notification_settings_no_white_list_title" />
        <SwitchPreference
            android:defaultValue="false"
            android:key="notification_channel_setting"
            android:singleLineTitle="false"
            android:summary="@string/notification_channel_setting_summary"
            android:title="@string/notification_channel_setting_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/screenshot_app_name">
        <SwitchPreference
            android:defaultValue="true"
            android:key="save_to_pictures"
            android:singleLineTitle="false"
            android:title="@string/save_to_pictures_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/screen_recorder_app_name">
        <SwitchPreference
            android:defaultValue="true"
            android:key="save_to_movies"
            android:singleLineTitle="false"
            android:title="@string/save_to_movies_title" />
        <SwitchPreference
            android:defaultValue="true"
            android:key="force_support_playbackcapture"
            android:singleLineTitle="false"
            android:summary="@string/force_support_playbackcapture_summary"
            android:title="@string/force_support_playbackcapture_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/ai_translate_app_name">
        <SwitchPreference
            android:defaultValue="true"
            android:key="support_ai_subtitles"
            android:singleLineTitle="false"
            android:summary="@string/support_ai_subtitles_summary"
            android:title="@string/support_ai_subtitles_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/system_update_app_name">
        <SwitchPreference
            android:defaultValue="false"
            android:key="remove_ota_validate"
            android:singleLineTitle="false"
            android:summary="@string/remove_ota_validate_summary"
            android:title="@string/remove_ota_validate_title" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/open_source_license">
        <Preference
            android:summary="Apache License 2.0, Copyright 2013 rovo89, Tungstwenty"
            android:title="Xposed">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/LuckyPray/DexKit" />
        </Preference>
        <Preference
            android:summary="LGPL-3.0 license, LuckyPray"
            android:title="DexKit">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://github.com/LuckyPray/DexKit" />
        </Preference>
        <Preference
            android:layout_height="wrap_content"
            android:summary="Apache License 2.0, Kotlin Team"
            android:title="Kotlin">
            <intent
                android:action="android.intent.action.VIEW"
                android:data="https://kotlinlang.org/" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>